<resources>
	<string name="app_name">VniDrop</string>
</resources>

